# hamburg-einbuergerungstest-terminfinder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  main.yml  release.yml
install/: install.ps1  install.sh
src/: main.rs  search.rs
src/finder/: __init__.py
tests/: appointments.html  no_appointments.html  test_finder.py
