[package]
name = "finder"
version = "0.0.4"
edition = "2021"
authors = ["Tobias Raabe <raabe@posteo.com>"]
license = "MIT"
description = "A tool to fetch appointments for Hamburg's Citizenship Test."
readme = "README.md"
homepage = "https://github.com/tobiasraabe/hamburg-einbuergerungstest-terminfinder"
repository = "https://github.com/tobiasraabe/hamburg-einbuergerungstest-terminfinder"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
indicatif = "0.18.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.23.1"
webbrowser = "1.0.5"

[dev-dependencies]
mockito = "1.7.0"

# For linux and macos, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }
