[package]
name = "finder"
version = "0.0.4"
edition = "2021"
authors = ["Tobias Raabe <raabe@posteo.com>"]
license = "MIT"
description = "A tool to fetch appointments for Hamburg's Citizenship Test."
readme = "README.md"
homepage = "https://github.com/tobiasraabe/hamburg-einbuergerungstest-terminfinder"
repository = "https://github.com/tobiasraabe/hamburg-einbuergerungstest-terminfinder"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
indicatif = "0.18.3"
reqwest = { version = "0.12.26", features = ["blocking"] }
scraper = "0.25.0"
webbrowser = "1.1.0"

# For linux and macos, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

[dev-dependencies]
mockito = "1.7.2"
