[project]
name = "finder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tobias Raabe", email = "raabe@posteo.de" }
]
dependencies = [
    "typer>=0.12.3",
    "playsound==1.2.2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"finder" = "finder:main"

[project.optional-dependencies]
test = [
    "respx>=0.21.1",
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/finder"]

[tool.ruff]
target-version = "py310"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Comply with ruff-format.
    "ISC001",  # Comply with ruff-format.
]

[tool.ruff.lint.per-file-ignores]
"src/finder/__init__.py" = ["D104"]
"tests/*" = ["ANN", "D", "S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
